home-cluster/meshtastic/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: meshmonitor-tcp
  namespace: meshtastic
  annotations:
    external-dns.alpha.kubernetes.io/hostname: meshmonitor.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  entryPoints:
    - meshmonitor-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: meshmonitor
          port: 4404
          terminationDelay: 0
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: meshmonitor-tcp-4405
  namespace: meshtastic
spec:
  entryPoints:
    - meshmonitor-4405
  routes:
    - match: HostSNI(`*`)
      services:
        - name: meshmonitor
          port: 4405
          terminationDelay: 0
