home-cluster/meshtastic/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: meshmonitor
  namespace: meshtastic
  annotations:
    external-dns.alpha.kubernetes.io/hostname: meshmonitor.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`meshmonitor.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: meshmonitor
          port: 3001
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: meshmonitor-tcp
  namespace: meshtastic
  annotations:
    external-dns.alpha.kubernetes.io/hostname: meshmonitor.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  entryPoints:
    - meshmonitor-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: meshmonitor
          port: 4404
          terminationDelay: 0
